--- a/failure.html
+++ b/failure.html
@@ -87,7 +87,7 @@ var interval = setInterval(function(){
   count--;
   if (count === 0){
     clearInterval(interval);
-   window.location.href = "http://localhost:3000/account/cart"
+   window.location.href = "https://theredapplestore.in/account/cart"
   }
 }, 1000);
 </script>
