--- a/success.html
+++ b/success.html
@@ -72,10 +72,10 @@
         <h1>Success</h1>
         <p>We received your purchase request;<br /> we'll be in touch shortly!</p>
         <br>
-        <a href="http://localhost:3000/account/cart">
+        <a href="https://theredapplestore.in/mobiles">
             <button type="button">Shop More</button>
         </a>
-        <a href="http://localhost:3000/account/cart">
+        <a href="https://theredapplestore.in/account/order">
             <button type="button">Go To My Orders</button>
         </a>
     </div>
